# lolzup

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  database.py  dialogs.py  docker-compose.yml  handlers.py  lolzup.db  main.py  pyproject.toml  repo.py  settings.py  tasks.py  tkq.py
.github/workflows/: release.yml
migrations/: 20260124213356_create_table.sql
src/: command.rs  common.rs  error.rs  lolz.rs  main.rs
src/bump/: mod.rs
src/lolz/: lolz.rs  mod.rs
src/scheduler/: mod.rs
