[project]
name = "lolzup"
version = "1.0.0"
description = "Auto-bump for humans"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiogram-dialog>=2.4.0",
    "sqlalchemy>=2.0.43",
    "taskiq>=0.11.18",
    "taskiq-aiogram>=0.3.1",
    "taskiq-redis>=1.1.0",
    "lolzteam",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.8",
    "asyncpg>=0.30.0",
]
